@@ -678,7 +678,9 @@
         name = "Paul Smedley (Creeping)"
     [/entry]
     [entry]
-        name = "Pauli Nieminen (coren/suokko)"
+        name = "Pauli Nieminen (suokko)"
+	email = "paniemin_AT_cc.hut.fi"
+	comment = "Bug fixing; ussualy targetting MP or WML engine"
     [/entry]
     [entry]
         name = "Petr Sobotka (Pietro)"
